# RailshotTV-Livestream

./: .gitignore  CMakeLists.txt  OBS_PORT_PHASES.txt  README.md  THIRD_PARTY_NOTICES.md
assets/overlays/: scoreboard.html
docs/: RELEASE_CHECKLIST.md
installer/: RailShotTV.iss
plugins/railshot-virtualcam/: WinHandle.hpp  placeholder.cpp  railshot-virtualcam64.def  threading-windows.h  virtualcam-filter.cpp  virtualcam-filter.hpp  virtualcam-guid.h  virtualcam-module.cpp
plugins/railshot-virtualcam/dshow/: log.cpp
scripts/: install-virtualcam.bat  package-release.ps1  setup-vendor.ps1  uninstall-virtualcam.bat
src/: main.cpp
src/capture/: ApplicationAudioSource.cpp  ApplicationAudioSource.h  AudioDeviceSource.cpp  AudioDeviceSource.h  BrowserSource.cpp  BrowserSource.h  BrowserSourceSettings.cpp  BrowserSourceSettings.h  CaptureConvert.cpp  CaptureConvert.h  ColorSource.cpp  ColorSource.h  DesktopAudioSource.cpp  DesktopAudioSource.h  DirectShowCapture.cpp  DirectShowCapture.h  DisplayCaptureSource.cpp  DisplayCaptureSource.h  DxgiMonitorCapture.cpp  DxgiMonitorCapture.h  GameCaptureSource.cpp  GameCaptureSource.h  ISourceProvider.h  ImageSource.cpp  ImageSource.h  MediaSource.cpp  MediaSource.h  MediaSourceSettings.cpp  MediaSourceSettings.h  NdiFinder.cpp  NdiFinder.h  NdiSource.cpp  NdiSource.h  ScoreboardSource.cpp  ScoreboardSource.h  TextSource.cpp  TextSource.h  VideoDeviceSource.cpp  VideoDeviceSource.h  WasapiAudioCapture.cpp  (+12 more)
src/core/: AppSettings.cpp  AppSettings.h  AudioMixer.cpp  AudioMixer.h  FrameData.cpp  FrameData.h  GLCompositor.cpp  GLCompositor.h  Logger.cpp  Logger.h  ProductionProfile.h  RemoteCommandBus.cpp  RemoteCommandBus.h  SourceRegistry.cpp  SourceRegistry.h  StreamController.cpp  StreamController.h  StreamServicePresets.cpp  StreamServicePresets.h  ThreadSafeQueue.h
src/core/models/: FilterUtils.cpp  SceneManager.cpp  SceneManager.h  SourceTypes.h
src/encoder/: FFmpegEncoder.cpp  FFmpegEncoder.h
src/network/: LocalWebServer.cpp  LocalWebServer.h  RailShotApiClient.cpp  RailShotApiClient.h  RemoteWebSocketServer.cpp  RemoteWebSocketServer.h
src/output/: FileRecorder.cpp  FileRecorder.h  IsoRecorder.cpp  IsoRecorder.h  Remux.cpp  Remux.h  ReplayBuffer.cpp  ReplayBuffer.h  RtmpOutput.cpp  RtmpOutput.h  VirtualCamOutput.cpp  VirtualCamOutput.h
src/output/virtualcam/: shared-memory-queue.c  shared-memory-queue.h  tiny-nv12-scale.h
src/resources/: RailShotBroadcaster.manifest  RailShotBroadcaster.rc  RailShotBroadcaster.rc.in
src/score/: MatchState.h  ScoreManager.cpp  ScoreManager.h  ScoreboardRenderer.cpp  ScoreboardRenderer.h  ScoreboardStyle.cpp  ScoreboardStyle.h
src/ui/: AddSourceDialog.cpp  AddSourceDialog.h  AudioMixer.cpp  AudioMixer.h  BrowserSourceConfigDialog.cpp  BrowserSourceConfigDialog.h  ColorSourceConfigDialog.cpp  ColorSourceConfigDialog.h  DockPanel.cpp  DockPanel.h  FiltersDialog.cpp  FiltersDialog.h  MainWindow.cpp  MainWindow.h  MediaSourceConfigDialog.cpp  MediaSourceConfigDialog.h  PreviewWidget.cpp  PreviewWidget.h  ScoreboardConfigDialog.cpp  ScoreboardConfigDialog.h  ScoreboardPreviewWidget.cpp  ScoreboardPreviewWidget.h  ScoreboardWidget.cpp  ScoreboardWidget.h  SettingsDialog.cpp  SettingsDialog.h  StudioMode.cpp  StudioMode.h  TextSourceConfigDialog.cpp  TextSourceConfigDialog.h  VenueMode.cpp  VenueMode.h
